--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,18 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
+# Public assets
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# App assets builds
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
+# Node modules
 /node_modules
+
+# Obsidian config
+/.obsidian/*
